# llama.cpp-Control-Deck

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  UX_ROADMAP.md  config.example.json  config.py  control_web.py  llama_cpp_gui.py  llama_cpp_release.py  llama_server_manager.py  ollama_proxy.py  pyproject.toml  requirements-dev.txt  requirements.txt  start_gui.sh  start_web.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
static/: control.css  control.js
templates/: index.html
tests/: test_smoke.py
