[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-cpp-control-deck"
version = "1.0.1"
description = "Web and Tkinter control panels with an Ollama-compatible proxy for local llama.cpp servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "llama.cpp Control Deck contributors" },
]
keywords = [
    "llama.cpp",
    "llama-server",
    "ollama",
    "openai-compatible",
    "gguf",
    "local-llm",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "psutil>=6.0.0,<7.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.scripts]
llama-control-deck = "llama_cpp_gui:main"
llama-control-deck-web = "control_web:main"
llama-control-deck-manager = "llama_server_manager:main"
llama-control-deck-config = "config:main"

[project.urls]
Homepage = "https://github.com/deposist/llama.cpp-Control-Deck"
Issues = "https://github.com/deposist/llama.cpp-Control-Deck/issues"
Source = "https://github.com/deposist/llama.cpp-Control-Deck"

[tool.setuptools]
py-modules = [
    "config",
    "control_web",
    "llama_cpp_release",
    "llama_cpp_gui",
    "llama_server_manager",
    "ollama_proxy",
]
